core: don't consider umask for SocketMode=

https://bugs.freedesktop.org/show_bug.cgi?id=89248